# TheEpiphanyEngine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  BUGFIXES.md  CHANGELOG.md  CLEANUP_PLAN.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  HIGH_PRIORITY_FIXES_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  NEXT_STEPS.md  PACKAGE_STRUCTURE.md  PROJECT_REVIEW.md  PR_DESCRIPTION.md  QUICK_START_IMPROVEMENTS.md  README.md  SECURITY.md  SKILLS.md  THEORETICAL_FRAMEWORK.md  THEORY_INTEGRATION_SUMMARY.md  axiom_analysis.py  docker-compose.yml  mypy.ini  project_summary.py  pyproject.toml  requirements.txt  roadmap_analysis.py  ruff.toml
axiom/: __init__.py  core_equation.py  subjectivity_scale.py
benchmarks/: __init__.py  performance.py
docs/: API_REFERENCE.md  ARCHITECTURE.md
engine/: __init__.py  state.py  timesphere.py
examples/: 01_basic_growth.py  02_corruption_decay.py  03_divergent_paths.py  04_ai_alignment.py  05_resilience_recovery.py  05_theoretical_validation.py  06_innovation_cycles.py  run_all.py
extensions/: __init__.py  base.py  loader.py  registry.py
mcp/: __init__.py  server.py
notebooks/: 01_interactive_intelligence_exploration.ipynb  02_ai_alignment_deep_dive.ipynb
substrate/: .gitkeep  A Universal Foundation.md  Apex Proof of The Universal Axiom Framework.md  Deeper Exploration of the Axiom as a Redefinition of Algorithms.md  Deeper Formulations.md  Greater Objective Depth encompassed and reflected through Sonny.md  Inherent Engineering of The Universal Axiom.md  Introduction_to_Sonny_Immune_System_Edition.md  Introspective Application of The Universal Axiom.md  Metaphysical Thought Experiment.md  The 42 Dimensions of the Universal Axiom.md  The Universal Axiom A Conceptual Masterpiece of Higher-Order Intelligence.md  Transforming Values into Virtues within The Universal Axiom.md  Universal Axiom Circulatory System.md  Universal Axiom as a Meta-Application of the Scientific Method.md  Welcome to The EPIPHANY Engine AI.md
tests/: run_all_tests.py  test_api.py  test_bugfixes.py  test_components.py  test_core_equation.py  test_examples.py  test_exporters.py  test_logging_context.py  test_plotter.py  test_timesphere.py  test_validation.py
web/: api.py  (+4 more)
(+30 files in other folders)
