[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epiphany-engine"
version = "0.1.0"
description = "The Universal Axiom Organic Intelligence Model - A physics-style framework for modeling intelligence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "The Universal Axiom", email = "contact@example.com"}
]
keywords = ["intelligence", "ai", "simulation", "modeling", "axiom", "epiphany"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipython>=8.0",
]
all = [
    "epiphany-engine[dev,viz,notebooks]",
]

[project.urls]
Homepage = "https://github.com/TheUniversalAxiom/TheEpiphanyEngine"
Repository = "https://github.com/TheUniversalAxiom/TheEpiphanyEngine"
Documentation = "https://github.com/TheUniversalAxiom/TheEpiphanyEngine#readme"
Issues = "https://github.com/TheUniversalAxiom/TheEpiphanyEngine/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
