[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epiphany-engine"
version = "0.1.0"
description = "The Epiphany Engine"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["engine*", "axiom*", "mcp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
